# EvalParser

./: CMakeLists.txt  README.md
include/eval/: eval.hpp
include/parser/: parser.hpp
include/token/: token.hpp
src/: eval.cpp  parser.cpp  token.cpp
tests/: CMakeLists.txt  tokenTests.cpp
